# CrypticCoin

./: .gitignore  .gitlab-ci.yml  Makefile.am  README.md  configure.ac  go.sh
qa/pull-tester/: build-tests.sh.in  pull-tester.sh  run-bitcoind-for-test.sh.in
qa/rpc-tests/: conflictedbalance.sh  txnmall.sh  util.py  wallet.sh
src/: Makefile.am  Makefile.qt.include  Makefile.test.include  amount.cpp  amount.h  asyncrpcoperation.cpp  asyncrpcoperation.h  asyncrpcoperation_mergetoaddress.cpp  asyncrpcoperation_mergetoaddress.h  asyncrpcoperation_sendmany.cpp  asyncrpcoperation_sendmany.h  asyncrpcoperation_shieldcoinbase.cpp  asyncrpcoperation_shieldcoinbase.h  base58.cpp  base58.h  bitcoinrpc.cpp  bitcoinrpc.h  chainparams.cpp  crypter.h  hash.h  init.cpp  interpreter.cpp  interpreter.h  kernel.cpp  keystore.cpp  keystore.h  main.cpp  main.h  paymentdisclosure.cpp  paymentdisclosure.h  paymentdisclosuredb.cpp  random.cpp  random.h  rpcblockchain.cpp  rpcdisclosure.cpp  rpcdump.cpp  rpcmining.cpp  rpcmisc.cpp  rpcwallet.cpp  script.cpp  (+14 more)
src/config/: CrypticCoin-config.h.in
src/consensus/: consensus.h  upgrades.cpp  upgrades.h
src/crypto/: common.h
src/primitives/: transaction.cpp  transaction.h
src/qt/: bitcoin.cpp  blockbrowser.cpp  coincontroldialog.cpp  multisigdialog.cpp  multisiginputentry.cpp  transactionrecord.cpp
src/rpc/: blockchain.cpp
src/script/: sign.cpp  sign.h
src/test/: Makefile.am  script_P2SH_tests.cpp  util_tests.cpp  wallet_tests.cpp
src/wallet/: rpcwallet.cpp  wallet.cpp  wallet.h
src/zcash/: Address.cpp  Address.hpp  CreateJoinSplit.cpp  GenerateParams.cpp  IncrementalMerkleTree.cpp  IncrementalMerkleTree.hpp  JoinSplit.cpp  Note.cpp  Note.hpp  NoteEncryption.cpp  Proof.cpp  Proof.hpp  prf.cpp
